<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_guideline" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_nama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_nama"
        android:padding="12dp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintBottom_toTopOf="@id/edt_email"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/email_icon"
        android:background="@drawable/border"
        android:layout_marginTop="24dp"
        android:hint="@string/text_email"
        android:padding="12dp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_nama" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_password"
        android:padding="12dp"
        android:textColor="@color/primary"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_tanggal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/date_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_tanggal"
        android:padding="12dp"
        android:textColor="@color/primary"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_jenis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableStart="@drawable/gender_icon"
        android:drawablePadding="10dp"
        android:hint="@string/text_jenis"
        android:padding="12dp"
        android:textColor="@color/primary"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_tanggal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_daftar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/secondary"
        android:text="@string/text_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_landingBawah" />

    <TextView
        android:id="@+id/tv_landingBawah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sudah Punya Akun?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MASUK"
        app:layout_constraintStart_toEndOf="@id/tv_landingBawah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>